[gd_scene load_steps=5 format=3 uid="uid://b1cdup2d8hnt6"]

[ext_resource type="Script" path="res://scripts/sprite/enemy/red_enemy/red_enemy.gd" id="1_ijj0r"]
[ext_resource type="Texture2D" uid="uid://q00in63jcgiv" path="res://asset/texture/sprite/enemy/red_enemy/Enemy.png" id="1_llbkt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6tsh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imybc"]
size = Vector2(32, 32)

[node name="Red_Enemy" type="CharacterBody2D" groups=["red_enemy"]]
script = ExtResource("1_ijj0r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_llbkt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l6tsh")

[node name="Area2D" type="Area2D" parent="."]
light_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_imybc")

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2(15, 15)
target_position = Vector2(0, 9)

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2(-15, 15)
target_position = Vector2(0, 9)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
